...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.categories.not_root.CategoryActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categories_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:itemCount="5"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:listitem="@layout/root_category_item" />
...
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_folder"
            app:fab_title="@string/category"
            app:fab_colorNormal="@color/md_theme_primaryContainer" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_create_cycle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_cycle"
            app:fab_title="@string/cycle"
            app:fab_colorNormal="@color/md_theme_primaryContainer" />

...
