...
    <string name="category_dialog_name_hint">Name</string>
    <string name="category_dialog_parent_hint">Parent</string>
    <string name="category_dialog_no_parent">None</string>
    <string name="dialog_create_new">Create new %s</string>

    <string name="dialog_cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_edit_title">Edit %s</string>
    <string name="dialog_edit_name_hint">New name</string>

    <string name="category_empty">Category is empty</string>

    <string name="snackbar_text_inserted">\'%s\' inserted</string>
    <string name="snackbar_text_deleted">\'%s\' deleted</string>
    <string name="snackbar_text_updated">\'%s\' updated</string>
    <string name="snackbar_text_undo">Undo</string>
    <string name="snackbar_text_moved_to_parent">Moved %s to parent</string>
    <string name="snackbar_text_moved_into">Moved %s into %s</string>
    <string name="undo_last_action">Undo Last Action</string>

    <string name="cycle">Cycle</string>
    <string name="todo">Todo</string>
    <string name="toast_there_is_no_action_to_undo">There is no action to undo</string>


...
